# libft

./: .gitignore  .gitmodules  .libftmodules  .progress_pid  MEMORY_LEAK_FIXES.md  Makefile  PROMPT_IA  README.md  TODO  a.out  camera  cmd_flag_test  config.h  fdf.h  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_calloc.c  ft_colors.h  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_limits.h  ft_log10.c  ft_lstmap.c  ft_memchr.c  ft_memcmp.c  ft_print_memory.c  ft_putstr_fd.c  ft_split.c  ft_stddef.h  ft_strcat.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  (+11 more)
alias/: Makefile  alias_cmd.c  alias_find_slot.c  alias_free.c  alias_lookup.c  alias_print.c  alias_remove_all.c  alias_set.c  alias_str_quote.c  alias_unset.c  get_alias_state.c  libalias.h  unalias_cmd.c
docs/: Cargo.toml
docs/man/: ft_isblank.json  ft_queue_enqueue.json  ft_vector_create.json  printf.json
docs/manpages/: ft_isblank.md  ft_queue_enqueue.md  ft_vector_create.md
docs/src/: dev_server.rs  generator.rs  lib.rs  parser.rs
docs/templates/: index.html
ipc/pipes/libpipe/: CMakeLists.txt  Makefile  README.md
ipc/pipes/libpipe/docs/: usage.md
ipc/pipes/libpipe/examples/: simple_pipeline.c
ipc/pipes/libpipe/include/: ft_memory.h  pipe.h  pipe_internal.h
ipc/pipes/libpipe/src/: ft_memory.c  pipe_close_end.c  pipe_close_pair.c  pipe_create.c  read_all.c  read_line_arena.c  set_cloexec.c  set_nonblock.c  write_all.c
ipc/pipes/libpipe/tests/: test_read_all.c  test_write_all.c
srcs/ipc/pipes/libpipe/tests/: CMakeLists.txt  test_read_all.c  test_write_all.c
(+1979 files in other folders)
